// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an empty wrapper if no question data is passed in 1`] = `
<DocumentFragment>
  <div
    class=" grid  gap-4  p-2 "
  />
</DocumentFragment>
`;

exports[`renders an exam question with a fill-in field 1`] = `
<DocumentFragment>
  <div
    class=" grid  gap-4  p-2 "
  >
    <div
      class=" grid  gap-4  p-2 justify-center"
    >
      <div
        class=" grid  gap-8  p-2 max-w-xl"
      >
        <div
          class=" grid  gap-4  p-2 "
        >
          <form>
            <p
              class="inline-block text-night-black dark:text-max-white font-body font-body text-base mr-1"
            >
              What is 1 + 1?
            </p>
            <button
              class=" secondary  w-full sm:w-auto cursor-pointer border-2 font-bold leading-none inline-block rounded-lg text-center font-headings relative text-slate-700 bg-transparent border-slate-700 dark:text-max-white dark:border-max-white active:text-max-white active:bg-slate-700 active:border-slate-700 dark:active:bg-max-white dark:active:border-max-white dark:active:text-night-black px-5 py-2.5   "
              data-testid="button"
              type="submit"
            >
              <div
                class="triangle left"
              >
                <div />
              </div>
              <div
                class="triangle right"
              >
                <div />
              </div>
              <span
                class="pointer-events-none relative z-10"
              >
                Submit
              </span>
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders an exam question with an interactive table 1`] = `
<DocumentFragment>
  <div
    class=" grid  gap-4  p-2 "
  >
    <div
      class=" grid  gap-4  p-2 justify-center"
    >
      <div
        class=" grid  gap-8  p-2 max-w-xl"
      >
        <h4
          class="text-night-black dark:text-max-white font-headings font-semibold text-lg sm:text-md "
        >
          What is 1 + 1?
        </h4>
        <form>
          <div
            class=" grid  gap-8  p-2 "
          >
            <div
              class=" grid  gap-4  p-2 relative max-w-full"
            >
              <div
                class=" grid  gap-4  p-2 fade-scroller max-w-full overflow-x-auto overflow-y-hidden"
              >
                <div
                  class="grid gap-4 min-w-[600px]"
                  style="grid-template-columns: repeat(5, minmax(0, 1fr));"
                >
                  <div />
                  <div
                    cellindex="1"
                    class=" grid rounded-md gap-4 shadow-lg p-8 "
                    columnheaders="[object Object]"
                    numberofcellsincolumn="1"
                    numberofcellsinrow="4"
                    rowheaders="[object Object]"
                    rowindex="0"
                  >
                    <h4
                      class="text-night-black dark:text-max-white font-headings font-semibold text-md "
                    >
                      Column 1
                    </h4>
                  </div>
                  <div
                    cellindex="0"
                    class=" grid rounded-md gap-4 shadow-lg p-8 "
                    columnheaders="[object Object]"
                    numberofcellsincolumn="1"
                    numberofcellsinrow="4"
                    rowheaders="[object Object]"
                    rowindex="0"
                  >
                    <h4
                      class="text-night-black dark:text-max-white font-headings font-semibold text-md "
                    >
                      Row 1
                    </h4>
                  </div>
                  <div
                    cellindex="0"
                    class=" grid rounded-md gap-4 shadow-lg p-8 cursor-pointer bg-night-black-100 hover:bg-night-black-200"
                    columnheaders="[object Object]"
                    numberofcellsincolumn="1"
                    numberofcellsinrow="4"
                    rowheaders="[object Object]"
                    rowindex="0"
                    value="2"
                  >
                    <p
                      class=" text-night-black dark:text-max-white font-body font-body text-base undefined"
                    >
                      2
                    </p>
                  </div>
                  <div
                    cellindex="1"
                    class=" grid rounded-md gap-4 shadow-lg p-8 cursor-pointer bg-night-black-100 hover:bg-night-black-200"
                    columnheaders="[object Object]"
                    numberofcellsincolumn="1"
                    numberofcellsinrow="4"
                    rowheaders="[object Object]"
                    rowindex="0"
                    value="3"
                  >
                    <p
                      class=" text-night-black dark:text-max-white font-body font-body text-base undefined"
                    >
                      3
                    </p>
                  </div>
                  <div
                    cellindex="2"
                    class=" grid rounded-md gap-4 shadow-lg p-8 cursor-pointer bg-night-black-100 hover:bg-night-black-200"
                    columnheaders="[object Object]"
                    numberofcellsincolumn="1"
                    numberofcellsinrow="4"
                    rowheaders="[object Object]"
                    rowindex="0"
                    value="4"
                  >
                    <p
                      class=" text-night-black dark:text-max-white font-body font-body text-base undefined"
                    >
                      4
                    </p>
                  </div>
                  <div
                    cellindex="3"
                    class=" grid rounded-md gap-4 shadow-lg p-8 cursor-pointer bg-night-black-100 hover:bg-night-black-200"
                    columnheaders="[object Object]"
                    numberofcellsincolumn="1"
                    numberofcellsinrow="4"
                    rowheaders="[object Object]"
                    rowindex="0"
                    value="5"
                  >
                    <p
                      class=" text-night-black dark:text-max-white font-body font-body text-base undefined"
                    >
                      5
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders an exam question with multiple choice 1`] = `
<DocumentFragment>
  <div
    class=" grid  gap-4  p-2 "
  >
    <div
      class=" grid  gap-4  p-2 justify-center"
    >
      <div
        class=" grid  gap-8  p-2 max-w-xl"
      >
        <h4
          class="text-night-black dark:text-max-white font-headings font-semibold text-lg sm:text-md "
        >
          What is 1 + 1?
        </h4>
        <div
          class=" grid  gap-4  p-2 "
        >
          <button
            class=" secondary  w-full sm:w-auto cursor-pointer border-2 font-bold leading-none inline-block rounded-lg text-center font-headings relative text-slate-700 bg-transparent border-slate-700 dark:text-max-white dark:border-max-white active:text-max-white active:bg-slate-700 active:border-slate-700 dark:active:bg-max-white dark:active:border-max-white dark:active:text-night-black px-5 py-2.5 text-left  "
            data-testid="button"
            type="button"
          >
            <div
              class="triangle left"
            >
              <div />
            </div>
            <div
              class="triangle right"
            >
              <div />
            </div>
            <span
              class="pointer-events-none relative z-10"
            >
              2
            </span>
          </button>
          <button
            class=" secondary  w-full sm:w-auto cursor-pointer border-2 font-bold leading-none inline-block rounded-lg text-center font-headings relative text-slate-700 bg-transparent border-slate-700 dark:text-max-white dark:border-max-white active:text-max-white active:bg-slate-700 active:border-slate-700 dark:active:bg-max-white dark:active:border-max-white dark:active:text-night-black px-5 py-2.5 text-left  "
            data-testid="button"
            type="button"
          >
            <div
              class="triangle left"
            >
              <div />
            </div>
            <div
              class="triangle right"
            >
              <div />
            </div>
            <span
              class="pointer-events-none relative z-10"
            >
              3
            </span>
          </button>
          <button
            class=" secondary  w-full sm:w-auto cursor-pointer border-2 font-bold leading-none inline-block rounded-lg text-center font-headings relative text-slate-700 bg-transparent border-slate-700 dark:text-max-white dark:border-max-white active:text-max-white active:bg-slate-700 active:border-slate-700 dark:active:bg-max-white dark:active:border-max-white dark:active:text-night-black px-5 py-2.5 text-left  "
            data-testid="button"
            type="button"
          >
            <div
              class="triangle left"
            >
              <div />
            </div>
            <div
              class="triangle right"
            >
              <div />
            </div>
            <span
              class="pointer-events-none relative z-10"
            >
              4
            </span>
          </button>
          <button
            class=" secondary  w-full sm:w-auto cursor-pointer border-2 font-bold leading-none inline-block rounded-lg text-center font-headings relative text-slate-700 bg-transparent border-slate-700 dark:text-max-white dark:border-max-white active:text-max-white active:bg-slate-700 active:border-slate-700 dark:active:bg-max-white dark:active:border-max-white dark:active:text-night-black px-5 py-2.5 text-left  "
            data-testid="button"
            type="button"
          >
            <div
              class="triangle left"
            >
              <div />
            </div>
            <div
              class="triangle right"
            >
              <div />
            </div>
            <span
              class="pointer-events-none relative z-10"
            >
              5
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
